Cambiado a un nuevo esquema de colores
Utilizado el nuevo esquema de colores en la pagina principal

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 	
-</html>
+
 <head>
+		<meta content="text/html; charset=utf-8" http-equiv="content-type">
 		<link rel=stylesheet href="estilo.css" />
 		<script type="text/javascript" src="script.js"></script>
 		<script type="text/javascript" src="jquery.js"></script>
@@ -65,3 +66,5 @@
 		
 		</div>		
 	</body>
+
+	</html>
